# toweroffantasy.bot

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  requirements.txt
bot/: __init__.py  config.py  utils.py
bot/cogs/commands/: feedbacks.py  groups.py  helpCommand.py  matrice.py  matrices.py  mounts.py  owner.py  relics.py  servant.py  simulacra.py  weapon.py
bot/cogs/errorHandler/: appcommandsError.py  customErrors.py
bot/cogs/events/: data_sync.py
bot/cogs/locale/: translator.py
bot/core/controller/: get_data.py
bot/core/service/: api.py  sync_data.py
bot/core/views/: group_views.py  help_view.py  relic_view.py  servant_view.py  simulacra_buttons.py  simulacra_views.py
bot/infra/entitys/: __init__.py  banners.py  matrices.py  mount.py  relics.py  servant_extras.py  servants.py  simulacra.py  simulacra_extras.py  weapon.py  weapon_extras.py
src/: __init__.py  config.py  simulacra_buttons.py  utils.py
src/commands/: feedbacks.py  helpCommand.py  matrices.py  mounts.py  owner.py  relics.py  servant.py  simulacra.py
src/controller/: get_data.py
src/errorHandler/: appcommandsError.py
src/events/: data_sync.py
src/models/: __init__.py  matrices.py  mount.py  relics.py  servant_extras.py  servants.py  simulacra.py  simulacra_extras.py  weapon.py  weapon_extras.py
src/service/: sync_data.py
src/toweroffantasy_bot/: __main__.py  logger.py  settings.py
src/views/: help_view.py  relic_view.py  servant_view.py  simulacra_buttons.py  simulacra_views.py  views.py
tests/: models_test.py  name_list.py  servant_mount.py
(+89 files in other folders)
