[project]
name = "toweroffantasy.bot"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    { name = "Gabriel Nobrega", email = "gabrieltkdnobrega63@gmail.com" },
]
dependencies = [
    "pydantic-settings>=2.2.1",
    "pytz>=2024.1",
    "gql[all]>=3.5.0",
    "unidecode>=1.3.8",
    "pydantic>=2.7.1",
    "git+https://github.com/Rapptz/discord.py.git",
    "discord-py @ git+https://github.com/Rapptz/discord.py.git",
]
requires-python = "==3.12.*"
readme = "README.md"
license = { text = "MIT" }


[tool.pdm]
distribution = false


[tool.pdm.scripts]
start = "python src/toweroffantasy_bot"

[tool.pdm.dev-dependencies]
dev = ["types-pytz>=2024.1.0.20240417"]
